phancie-lang/tests/while/while_error_snapshot.txt
ERROR: Can't pass ByIn argument to a param with MutMode
        let mut ok = true;
                     ^^^^

ERROR: Can't pass ByIn argument to a param with MutMode
        let mut a = 0;
                    ^

ERROR: Type mismatch.
Expected: bool
Actual: int
Near1:
    true
    ^^^^
Near2:
    if a == 5 {
    ^^^^^^^^^^^
